# zephyr-python-api

./: .pylintrc  .readthedocs.yaml  LICENSE  Pipfile  README.md  TROUBLESHOOTING.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: build_and_load_to_pypi.yaml  pr_checks.yaml
docs/: requirements.txt
docs/source/: conf.py  examples.md  examples.rst  index.rst  installation.rst  troubleshooting.md
examples/: cloud.py  scale-server.py  squad-server.py
scale/: zephyr_session.py
scale/cloud/: cloud_api.py  zephyr_scale_cloud.py
scale/cloud/endpoints/: __init__.py  environments.py  folders.py  links.py  test_cases.py  test_cycles.py  test_plans.py
tests/: pytest.ini  test_scale.py
tests/unit/: test_scale.py  test_zephyr_session.py
zephyr/: __init__.py
zephyr/common/: zephyr_session.py
zephyr/scale/: __init__.py  scale.py  testcase.py  zephyr_scale_session.py  zephyr_session.py
zephyr/scale/cloud/: cloud_api.py  zephyr_scale_cloud.py
zephyr/scale/cloud/endpoints/: __init__.py  automations.py  endpoints.py  environments.py  folders.py  healthcheck.py  links.py  paths.py  priorities.py  projects.py  statuses.py  test_cases.py  test_cycles.py  test_executions.py  test_plans.py
zephyr/scale/server/: server_api.py  server_defaults.py
zephyr/scale/server/endpoints/: __init__.py  endpoints.py
zephyr/scale/server/enpoints/: __init__.py  endpoints.py  paths.py  test_cases.py
zephyr/squad/: __init__.py  squad.py  zephyr_squad_session.py
zephyr/squad/server/: actions.py  server_api.py
zephyr/squad/server/endpoints/: __init__.py  actions.py  endpoints.py  paths.py
zephyr/utils/: common.py
