[metadata]
name = zephyr-python-api
version = 0.0.2
author = Petr Sharapenko
author_email = nassauwinter@gmail.com
description = Zephyr (TM4J) Python REST API wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nassauwinter/zephyr-python-api
project_urls =
    Bug Tracker = https://github.com/nassauwinter/zephyr-python-api/issues
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.packages.find]
exclude =
    tests*